@@ -81,50 +81,22 @@ uninstall:
 	install -D src/core/extlib.mli   _build/src/core/extlib.mli
 
 
-doc: src/main/threads/batteries.cma doc/api.odocl
+doc: byte doc/api.odocl
 	\rm -Rf doc/batteries/html/api &&\
-	ocamlbuild -I src/main/threaded doc/api.docdir/index.html &&\
+	ocamlbuild -I src/main/threads doc/api.docdir/index.html &&\
 	rm api.docdir &&\
 	mv _build/doc/api.docdir/ doc/batteries/html/api
 
-doc/api.odocl: list
-	@echo $(basename $(notdir $(shell find src/ -name "*.ml" -o -name "*.mlpack"))) > batteries.mllib &&\
-	sed -e "s/ /\n/g" -e "s/batlib/Batlib/g" -e "s/batteries\\nbatteries/batteries/" -e "s/batteriesLayer1_nothread//\\n" batteries.mllib > src/main/threaded/batteries.mllib &&\
-	echo Extlib >  doc/api.odocl &&\
-	cat batteries.mllib >> doc/api.odocl
-
-#
-#Generate the list of modules we intend to put into batlib.cma
-#
-list: src/main/threaded/batteries.mllib src/main/nothreads/batteries.mllib
-
-src/main/threaded/batteries.mllib:
-	@echo $(basename $(notdir $(shell find src/ -name "*.ml" -o -name "*.mlpack"))) > batteries.mllib &&\
-	sed -e "s/ /\n/g" -e "s/batlib/Batlib/g" -e "s/batteries\\nbatteries/batteries/" -e "s/batteriesLayer1_nothreads\\n//" batteries.mllib > src/main/threaded/batteries.mllib
-
-src/main/nothreads/batteries.mllib:
-	@echo $(basename $(notdir $(shell find src/ -name "*.ml" -o -name "*.mlpack"))) > batteries.mllib &&\
-	sed -e "s/ /\n/g" -e "s/batlib/Batlib/g" -e "s/batteries\\nbatteries/batteries/" -e "s/batteriesLayer1\\n//" batteries.mllib > src/main/nothreads/batteries.mllib
-
-
+doc/api.odocl: 
+	cp src/main/threads/batteries.mllib doc/api.odocl
 
 prepare_syntax_contents:
 	@echo $(basename $(notdir $(shell find syntax -name  "*.ml"))) > batsyntax.mllib &&\
 	sed -e "s/ /\n/g" -e "s/batlib/Batlib/g"   -i batsyntax.mllib
 
-#install:
-#	ocamlfind install batteries build/threaded/META _build/src/main/threaded/batteries.cmi -optional _build/src/main/threaded/batteries.cma  _build/src/main/threaded/batteries.cmxa  _build/src/main/threaded/batteries.a  &&\
-#	ocamlfind install batteries_nothreads build/nothreads/META _build/src/main/nothreads/batteries.cmi -optional _build/src/main/nothreads/batteries.cma  _build/src/main/nothreads/batteries.cmxa  _build/src/main/nothreads/batteries.a
-
-
-
-#uninstall:
-#	ocamlfind remove batteries &&\
-#	ocamlfind remove batteries_nothreads
-
 clean:
 	ocamlbuild -clean &&\
-	\rm -f `find . -name "*~" -o -name "*#"` &&\
+	\rm -f `find . -name "*~" -o -name "*#" -o -name "*odoc"` &&\
 	\rm -f META doc/api.odocl doc/batteries/html/api/* 
 
 .PHONY: doc/api.odocl batteries.mllib
