@@ -46,7 +46,6 @@ UChar
 IO
 ExtUnit
 ExtBig_int
-Builtin_tools
 Batlib_Findlib_Findlib
 Batlib_Baselib_Big_int
 Batlib_Baselib_Genlex
@@ -94,10 +93,8 @@ Batlib_Baselib_Weak
 Batlib_Baselib_Str
 Batlib_Baselib_Lazy
 Extlib
-ExtBig_int
 Batteries_core
 Builtin_tools
-Batlib_Findlib_Findlib
 Batlib_Baselib_Event
 Batlib_Baselib_Condition
 Batlib_Baselib_Mutex
